# rag_with_claude_code

./: CLAUDE.md  environment.yml  frontend-changes.md  pyproject.toml  query_flow_diagram.html  query_flow_diagram.txt  query_flow_documentation.txt  requirements.txt  run.sh
backend/: ai_generator.py  app.py  models.py  progress.txt  recommended_fixes.md  search_tools.py  test_analysis_report.md  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_ai_generator_multi_round.py  test_api_endpoints.py  test_course_search_tool.py  test_infrastructure.py  test_rag_system.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
